<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/linear_layout_join_now"
    android:touchscreenBlocksFocus="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#97040506" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textColor="#ffffff"
            android:id="@+id/skip_btn"
            android:text="@string/skip_btn_text"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="66sp"
            android:paddingLeft="66sp"
            android:paddingBottom="36dp"
            android:src="@drawable/trujobs_logo_white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical" >

            <Button
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/join_now_btn_text"
                android:id="@+id/join_now_btn"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login_btn_text"
                android:id="@+id/login_now_btn"
                style="@style/Widget.AppCompat.Button.Colored" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="I have read and accepted the Terms of Use and the Privacy Policy"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>